# ros2

./: .gitignore  README.md  index.html  novel1.txt  novel2.txt  novel3.txt
demo_cpp_pkg/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  cpp_node
demo_cpp_pkg/install/: local_setup.sh  setup.sh
demo_cpp_pkg/install/demo_cpp_pkg/lib/demo_cpp_pkg/: cpp_node  learn_function  learn_thread  person_node
demo_cpp_pkg/install/demo_cpp_pkg/share/ament_index/resource_index/parent_prefix_path/: demo_cpp_pkg
demo_cpp_pkg/install/demo_cpp_pkg/share/demo_cpp_pkg/: local_setup.sh  package.sh  package.xml
demo_cpp_pkg/log/: latest_build
demo_cpp_pkg/src/: cpp_node.cpp  learn_function.cpp  learn_function1.cpp  learn_lambda.cpp  learn_thread.cpp  person_node.cpp
demo_cpp_topic/: CMakeLists.txt
demo_cpp_topic/install/: local_setup.sh  setup.sh
demo_cpp_topic/log/: latest_build
demo_cpp_topic/src/: turtle_circle.cpp  turtle_control.cpp
demo_python_pkg/: setup.py
demo_python_pkg/demo_python_pkg/: learn_thread.py  python_node.py  writer_node.py
demo_python_pkg/install/: local_setup.sh  setup.sh
demo_python_pkg/log/: latest_build
install/: local_setup.sh  setup.sh
log/: latest_build
src/chapt4_interfaces/: CMakeLists.txt  package.xml
src/demo_cpp_service/: CMakeLists.txt
src/demo_cpp_service/src/: patrol_client.cpp  turtle_control.cpp
topic_parctice_ws/install/: local_setup.sh  setup.sh
topic_parctice_ws/log/: latest_build
topic_parctice_ws/src/status_display/: CMakeLists.txt
总结/: CMakeLists.txt  node.cpp  node.py
(+49 files in other folders)
